将cf的人机验证改为在本地运行的文本验证机制，以提高通过率并拦截未搭载图片识别AI的大部分机器人
